--- a/_posts/2022-01-01-bot.md
+++ b/_posts/2022-01-01-bot.md
@@ -1,6 +1,6 @@
 ---
 title: dc bot
-layout: post
+layout: article
 ---
 
 
@@ -78,10 +78,12 @@ https://nextcord.readthedocs.io/en/latest/api.html
      ```
      就可以讓屬於自己的機器人在repl上運行了喔，是不是很棒！
 最後補充(欸原諒筆者屁話有點多)
+
 ```py
 if __name__ == "__main__":
 ```
 是在py中運行main函式的方法，即使py不需要 main function也能運作，但這依舊是寫程式的好習慣喔。
+
 ``` py
 import nextcord
 from nextcord.ext import commands
