--- a/_posts/dc_bot/2022-01-01-day-1.md
+++ b/_posts/dc_bot/2022-01-01-day-1.md
@@ -1,7 +1,7 @@
 ---
-title: day 1
-layout: article
-categories: dc_bot
+title: dc bot day 1
+layout: article 
+categories: dc_bot list
 modified: 2022-01-01
 ---
 
