--- a/_posts/dc_bot/2022-01-01-day-1.md
+++ b/_posts/dc_bot/2022-01-01-day-1.md
@@ -8,7 +8,7 @@ modified: 2022-01-01
 
 # 從零開始開發discord機器人
 
-###### tags: `python` `nextcord`
+###### tags: `day 1` `python` `nextcord`
 
 > 此教程適合給已知python基礎及物件導向概念的人使用
 > 若不熟也沒關係，筆者在需要時會特別提及
@@ -16,7 +16,7 @@ modified: 2022-01-01
 ## 什麼是discord bot 與 nextcord
 discord bot 是專門在discord伺服器上運行的機器人，而 nextcord 是別人寫好的函式庫，用來與 discord 伺服器對接的一個橋樑。
 
-### Step 1: 建立一隻機器人
+### 建立一隻機器人
 
 - [ ] 建立discord帳號及bot的註冊
 - [ ] 下載nextcord module
