weekly report and fix some problem

--- a/_posts/dc_bot/2022-01-01-day-1.md
+++ b/_posts/dc_bot/2022-01-01-day-1.md
@@ -1,5 +1,5 @@
 ---
-title: dc bot day 1
+title: day 1 建立簡單的機器人
 layout: article 
 categories: dc_bot list
 modified: 2022-01-01
@@ -67,8 +67,7 @@ pip install nextcord
 async(異步執行)，指讓程式模擬cpu中多執行緒的概念，在等待網站回應的同時先做別的指令，白話文講，就是可以同時做很多件事情，discord bot也是以這個概念完成的。
 
 **API**
-所謂API其實就是官方文件，讓我們可以查相關指令語法的地方，阿因為是全英文的，所以看不懂就沒辦法啦。
-以下是nextcord的官方文件
+所謂API是應用程式間的溝通橋樑，那在dc bot中有許多各式各樣的函式，nextcord API的文件就會告訴你這西函式的元素，輸入輸出的型態等，查詢官方文件可以讓你在想寫一些功能的時候有個介面可以搜尋相關函式及應用。
 <https://nextcord.readthedocs.io/en/latest/api.html>
 
 
